--- a/_sass/modules/_hero.scss
+++ b/_sass/modules/_hero.scss
@@ -4,7 +4,7 @@
 
 .hero {
 	height: 1000px;
-	background: url('https://upload.wikimedia.org/wikipedia/en/thumb/3/32/Minecraft_logo.svg/1280px-Minecraft_logo.svg.png'),
+	background: url('https://upload.wikimedia.org/wikipedia/en/thumb/3/32/Minecraft_logo.svg/1280px-Minecraft_logo.svg.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin-bottom: em(50px);
