--- a/_sass/modules/_hero.scss
+++ b/_sass/modules/_hero.scss
@@ -3,7 +3,8 @@
 // ==========================================================================
 
 .hero {
-	height: 330px;
+	width:80vw;
+	height:80vh;
 	background: url('https://upload.wikimedia.org/wikipedia/en/thumb/3/32/Minecraft_logo.svg/1280px-Minecraft_logo.svg.png');
 	background-repeat: no-repeat;
 	background-size: cover;
