--- a/_sass/modules/_hero.scss
+++ b/_sass/modules/_hero.scss
@@ -4,7 +4,7 @@
 
 .hero {
 	height:120px;
-	background: url('https://upload.wikimedia.org/wikipedia/en/thumb/3/32/Minecraft_logo.svg/1280px-Minecraft_logo.svg.png');
+	background: url('');
 	background-repeat: no-repeat;
 	margin-bottom: em(200px);
 }
