--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,7 +2,7 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'coolwebconfs';
+    var disqus_shortname = 'comments';
     
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
