Attempt to use haml instead of html

--- a/index.haml
+++ b/index.haml
@@ -1,10 +1,9 @@
 ---
 layout: default
 ---
-<!--<div class="hero is-hidden-mobile"></div>-->
-<div class="grid">
-  <div class="grid__col--12">
-    <ul class="post">
+div.grid
+  div.grid__col--12
+    ul.post
       <!-- This loops through the paginated posts -->
       {% for post in paginator.posts %}
         <li class="post__item">
