--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 <header class="main-header" role="banner">
   <div class="grid">
     <div class="grid__col--12">
+      <img class="img--avatar" src="{{ site.avatar }}">
       <a class="site-logo" href="{{ site.baseurl }}/" title="Andrew">
         {{ site.title }}
       </a>
