--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,18 @@
   <div class="grid">
     <div class="centered grid__col--6">
       <p>{{ site.description }} <br>
-        Linkedin <a href="https://linkedin.com/in/andrewcarsongay"><img src="http://www.thegrowthdriver.com/wp-content/uploads/2014/06/LinkedIn_Icon.png"/></a>
+        <ul>
+          <li><a href="https://linkedin.com/in/andrewcarsongay"><img src="http://www.thegrowthdriver.com/wp-content/uploads/2014/06/LinkedIn_Icon.png" alt="linkedin"/></a></li>
+          <li><a href="https://www.centural.co"><img src="" alt="centural minecraft"/></a></li>
+          <li><a href="https://www.survivalplus.co"><img src="" alt="survival+ minecraft"/></a></li>
+          
+        </ul>
+      </p>
+      
+      
+       Linkedin <a href="https://linkedin.com/in/andrewcarsongay"><img src="http://www.thegrowthdriver.com/wp-content/uploads/2014/06/LinkedIn_Icon.png"/></a>
         Follow <a href="https://twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a> or
         subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a>
-      </p>
     </div>
   </div>
 </footer>
