--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="panel--centered" role="contentinfo">
   <div class="grid">
     <div class="centered grid__col--6">
-      <p>{{ site.description }} <br>
+      <p id="small_icons">{{ site.description }} <br>
         Link <a href="https://linkedin.com/in/{{ site.linkedin_username }}"><img src="http://icons.iconarchive.com/icons/iconshock/social-media/128/linkedin-icon.png" alt="linkedin"/></a>,
         Follow <a href="https://twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a> or
         subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a>
