--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,6 @@ layout: default
     </article>
 
     {% include disqus.html disqus_identifier=page.disqus_identifier %}
-   
+    {% include chat.html %}
 	</div>
 </div>
